Fixed nav bar spacing issues.

--- a/app/_less/main.less
+++ b/app/_less/main.less
@@ -269,6 +269,7 @@
 
   section.features {
     background: white;
+    margin-bottom: 30px;
     h3 {
       text-align: center;
       font-weight: 300;
