--- a/app/_less/nav.less
+++ b/app/_less/nav.less
@@ -10,6 +10,12 @@
 
   .navbar {
 
+    ul {
+      a {
+        padding: 10px 40px 10px 40px;
+      }
+    }
+
     li.twitter-follow-button {
       padding: 16px 15px 14px;
     }
